CHG: remove unnecesary casts and add generics
Signed-off-by: Francisco Collao Garate <pcollaog@gmail.com>